fix: :bug:  font-size too small problem

--- a/src/css/common/common.scss
+++ b/src/css/common/common.scss
@@ -4,6 +4,10 @@
 	-webkit-text-size-adjust: none;
 }
 
+html {
+	font-size: 20px !important;
+}
+
 html,
 body {
 	height: 100%;
