--- a/src/css/main/main.scss
+++ b/src/css/main/main.scss
@@ -28,16 +28,16 @@
 
 			header {
 				h1 {
-					font-size: 1em !important;
+					font-size: 1rem !important;
 				}
 				h2 {
-					font-size: 0.8em !important;
+					font-size: 0.8rem !important;
 				}
 			}
 
 			ul {
 				li {
-					font-size: 0.8em !important;
+					font-size: 0.8rem !important;
 				}
 			}
 		}
@@ -64,7 +64,7 @@
 			h1 {
 				margin: 15px 15px 0px;
 				color: #fff;
-				font-size: 2em;
+				font-size: 2rem;
 				line-height: 1.2em;
 				font-weight: 300;
 
@@ -74,7 +74,7 @@
 			h2 {
 				color: #ccc;
 				letter-spacing: 3px;
-				font-size: 0.8em;
+				font-size: 0.8rem;
 				font-weight: lighter;
 			}
 		}
